--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -274,7 +274,7 @@
         <p><span>Iva E. Popova.</span>, 2016.
         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a></p>
         </div>
-        <div class="right">Prepared for <a href="http://progressbg.net/kurs-po-web-design/">ProgressBG WebDesign Course</a></div>
+        <div class="right">Created for <a href="http://progressbg.net/kurs-po-web-design/">ProgressBG WebDesign Course</a></div>
 </footer>
 <script type="text/javascript" src="../../outfit/js/agenda.js"></script>
 <script type="text/javascript">init();</script>
