Useful Links workaround

--- a/pages/readings/beginners/UsefulResources.html
+++ b/pages/readings/beginners/UsefulResources.html
@@ -72,14 +72,6 @@
                             <li><a class="beg" href="http://westciv.com/tools/video/"></a></li>
                         </ol>
                     </li>
-                    <li><h3>Onine Fonts tools&amp;resourses</h3>
-                    <ol>
-                        <li><a href="https://fortawesome.github.io/Font-Awesome/icons/">Font-Awesome Icons</a><span>официлания сайт в github. Показани са всички икони предлагани от <a href="https://fortawesome.github.io/Font-Awesome/">Font-Awesome</a></span></li>
-                        <li><a href="https://developers.google.com/fonts/docs/getting_started">Google Developers- Google Fonts API</a><span>справочник от Google за употребата на хостваните от тях шрифтове.</span></li>
-                        <li><a href="http://glyphsearch.com/">GlyphSearch</a><span>търсене на икони по ключови думи във Font Awesome, Foundation, Glyphicons, IcoMoon, Ionicons, Material Design, and Octicons</span></li>
-                        <li><a href="http://faicons.com/">faicons</a><span>търси по дума само във Font Awesome</span></li>
-                    </ol>
-                    </li>
                 </ul>
             </li>
             <li><h2>Свободни за използване ресурси</h2>
@@ -99,9 +91,13 @@
                             <li><a class="beg" href="https://www.youtube.com/">youtube.com</a> и др.<span>посочете във филтъра при търсенето "CreativeCommons" (или използвайте търсачката: <a href="https://search.creativecommons.org/">CC Search - Creative Commons</a>)</span></li>
                         </ol>
                     </li>
-                    <li><h3>Икони, символи</h3>
+                    <li><h3>Икони, символи, шрифтове</h3>
                         <ol>
                             <li><a class="beg" href="http://www.copypastecharacter.com/">CopyPasteCharacter.com</a><span>ако се налага да вмъкнете специален символ (от цялата unicode таблица) във вашата страница - това е най-лесният и удобният начин.</span></li>
+                            <li><a href="https://fortawesome.github.io/Font-Awesome/icons/">Font-Awesome Icons</a><span>официлания сайт в github. Показани са всички икони предлагани от <a href="https://fortawesome.github.io/Font-Awesome/">Font-Awesome</a></span></li>
+                            <li><a href="https://developers.google.com/fonts/docs/getting_started">Google Developers- Google Fonts API</a><span>справочник от Google за употребата на хостваните от тях шрифтове.</span></li>
+                            <li><a href="http://glyphsearch.com/">GlyphSearch</a><span>търсене на икони по ключови думи във Font Awesome, Foundation, Glyphicons, IcoMoon, Ionicons, Material Design, and Octicons</span></li>
+                            <li><a href="http://faicons.com/">faicons</a><span>търси по дума само във Font Awesome</span></li>
                         </ol>
                     </li>
                 </ul>
