--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -270,6 +270,7 @@
     <section><h4>Какво ще научите в курса</h4>
     </section>
 </article> -->
+<a href="../readings/beginners/UsefulResources.html" title="Useful Links"><i class="fa fa-link"></i></a>
 <footer><div class="license left">
         <p><span>Iva E. Popova.</span>, 2016.
         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a></p>
