Typo (H1 example left purple)

--- a/pages/themes/beginners/CSS_Intro/CSS_Intro.html
+++ b/pages/themes/beginners/CSS_Intro/CSS_Intro.html
@@ -27,6 +27,12 @@
     <![endif]-->
     <!-- custom -->
     <link rel="stylesheet" href="../../../../outfit/css/reveal.js.css">
+    <style type="text/css">
+    .reveal .slides h1{
+        font-family: serif;
+        color: #FF00E6;
+    }
+    </style>
     <base target="_blank">
 </head>
 <body>
@@ -251,7 +257,7 @@ h4 {
         <h3>От елементи-родители в HTML дървото</h3>
         <pre><code>
         body{
-            color: #4279AC;
+            background-color: #4279AC;
             color: #000;
         }
         div{
