--- a/pages/readings/beginners/UsefulResources.html
+++ b/pages/readings/beginners/UsefulResources.html
@@ -89,6 +89,7 @@
                         <ol>
                             <li><a class="beg" href="https://vimeo.com/creativecommons">Browse the Creative Commons licensed videos on Vimeo</a><span>файловете във <a href="https://vimeo.com/">vimeo</a>, подредени според различните CC лицензи.</span></li>
                             <li><a class="beg" href="https://www.youtube.com/">youtube.com</a> и др.<span>посочете във филтъра при търсенето "CreativeCommons" (или използвайте търсачката: <a href="https://search.creativecommons.org/">CC Search - Creative Commons</a>)</span></li>
+                            <li><a href="http://www.coverr.co/">coverr.co</a><span>beautiful, free videos for your homepage</span></li>
                         </ol>
                     </li>
                     <li><h3>Икони, символи, шрифтове</h3>
