--- a/pages/themes/beginners/Course_Intro/Course_Intro.html
+++ b/pages/themes/beginners/Course_Intro/Course_Intro.html
@@ -136,7 +136,8 @@
     <section>
         <ul class="fa">
             <li>Възможност за споделяне на материали чрез  GoogleDrive</li>
-            <iframe src="https://drive.google.com/embeddedfolderview?id=0B78rPN4WCkJEMHNERHJlZWltMXc#list" width="800" height="600" frameborder="0"></iframe>
+            <img src="images/GD.png">
+            <!-- <iframe src="https://drive.google.com/embeddedfolderview?id=0B78rPN4WCkJEMHNERHJlZWltMXc#list" width="800" height="600" frameborder="0"></iframe> -->
         </ul>
     </section>
     <section>
