--- a/pages/themes/beginners/CSS_Intro/examples/flag_with_css.html
+++ b/pages/themes/beginners/CSS_Intro/examples/flag_with_css.html
@@ -22,14 +22,26 @@
             color: #CCC;
         }
         .bg>span:nth-child(3){
-            background: red;
+            /*background: red;*/
             color: #CCC;
         }
+        .bg>span:nth-child(3){
+            /*background: red;*/
+            /*font-family: sans-serif;*/
+        }
+        .blue{
+            background: blue;
+        }
+        span{
+            background: black !important;
+        }
+
     </style>
 </head>
 <body>
-    <div class="flag bg">
-        <span>Бяло</span><span>Зелено</span><span>Червено</span>
+    <div class="flag bg blue">
+        <p>Българското знаме</p>
+        <span>Бяло</span><span>Зелено</span><span style="background: yellow">Червено</span>
     </div>
 </body>
 </html>
