--- a/pages/themes/beginners/HTML_Bases/HTML_Bases.html
+++ b/pages/themes/beginners/HTML_Bases/HTML_Bases.html
@@ -206,7 +206,7 @@
             p {color:green;}
         &lt;/style&gt;
         </code></pre>
-        <p><em>NB!</em>Стиловете ще разгледаме детайлно в уроците за CSS.</p>
+        <p><em>NB!</em>Стиловете ще разгледаме детайлно в уроците за CSS, а самото вграждане - в темата "<a href="../CSS_Intro/CSS_Intro.html">Въведение в CSS</a>".</p>
     </section>
     <section><h3>Елемента script</h3>
         <pre><code>
@@ -269,9 +269,12 @@
 
     </section>
 </section>
+<section data-background="../../../../outfit/images/for_slides/the_end_on_sand.jpg">
+    <!-- <img class="the_end" src="../../../../outfit/images/for_slides/the_end_on_sand.jpg"> -->
+</section>
 <!--
 ########################################################
-##################### SLIDES START #####################
+##################### SLIDES END   #####################
 ########################################################
 -->
         </div>
