--- a/pages/themes/beginners/Course_Intro/Course_Intro.html
+++ b/pages/themes/beginners/Course_Intro/Course_Intro.html
@@ -179,10 +179,12 @@ codepen-which-one-to-use-and-why/">jsbin, jsfiddle or codepen?</a></p>
         <p>Или от основния изглед на даден Пен => бутона Collections</p>
     </section>
 </section>
-
+<section data-background="../../../../outfit/images/for_slides/the_end_on_sand.jpg">
+    <!-- <img class="the_end" src="../../../../outfit/images/for_slides/the_end_on_sand.jpg"> -->
+</section>
 <!--
 ########################################################
-##################### SLIDES START #####################
+##################### SLIDES END   #####################
 ########################################################
 -->
         </div>
