--- a/pages/themes/beginners/CSS_Intro/examples/CSS_rules_inheritance_on_tree_not_inhereted.html
+++ b/pages/themes/beginners/CSS_Intro/examples/CSS_rules_inheritance_on_tree_not_inhereted.html
@@ -6,13 +6,12 @@
     <style type="text/css">
         body{
             background-color: lightblue;
-            /*Всички елементи в body, ще се изобразят с черен на цвят шрифт*/
             color: black;
         }
         div{
             background-color: red;
-            /*Всички елементи в div, ще се изобразят с бял на цвят шрифт*/
             color: white;
+            border: 5px solid green;
         }
     </style>
 </head>
