--- a/pages/readings/beginners/UsefulResources.html
+++ b/pages/readings/beginners/UsefulResources.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>UsefulResources</title>
+    <title>Course Resources</title>
     <base target="_blank">
     <!-- CUSTOM PAGE STYLES -->
     <link rel="stylesheet" type="text/css" href="../../../outfit/css/master.css">
