--- a/pages/themes/beginners/CSS_Intro/examples/flag_without_css.html
+++ b/pages/themes/beginners/CSS_Intro/examples/flag_without_css.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<style type="text/css">
+    span:first-child{
+        background: blue;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <title>flag_without_css</title>
