--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -118,7 +118,7 @@
                 <li>Наследяване на CSS правила. Какво е "каскадното" в CSS ?</li>
             </ol>
         </li>
-        <li><h3><a class="nonactive" href="../themes/slides/how_a_web_site_works.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Селектори в CSS3 - Част1</span><span class="hours">2</span></h3>
+        <li><h3><a class="active" href="../themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Селектори в CSS3 - Част1</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>Селектори за елементи.</li>
                 <li>Селектори за class и id.</li>
