Index fix; CSS Selectors Examples

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <p>Agenda</p>
 </header>
 <article>
-    <a class="content_left" href="pages/agenda/beginners.html" title="Go to agenda">Beginners</a>
-    <a class="content_right" href="pages/agenda/advanced.html" title="Go to agenda">Advanced</a>
+    <a class="content_left" href="pages/agenda/beginners.html" title="Go to Course Agenda in Bulgarian">Fundamentals</a>
+    <a class="content_right" href="pages/agenda/advanced.html" title="Go to Course Agenda in English">Advanced</a>
     <div class="diagonal_bg"></div>
 </article>
 <footer><div class="license">
