--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -85,6 +85,7 @@
             <ol class="iep_syllabus_sub_themes">
                 <li>Кога и за какво да използваме таблици?</li>
                 <li>Как да създадем таблица в HTML.</li>
+                <li>Сливане на клетки (cell span) по редове и колони.</li>
                 <li>Някои забележки относно оформлението на таблиците и HTML5.</li>
             </ol>
         </li>
