--- a/pages/readings/beginners/UsefulResources.html
+++ b/pages/readings/beginners/UsefulResources.html
@@ -16,7 +16,7 @@
         <h3><a href="../../../index.html">WebDesign/Front-end Dev Course</a></h3>
         <h4>Полезни ресурси</h4>
     </header>
-    <section class="disclaimer">Списъкът непрекъснато ще се променя и редактира!</section>
+    <section class="disclaimer">Списъкът непрекъснато ще се променя! Вашите предложения с добре дошли...</section>
     <section class="resources_list_container">
         <ul>
             <li><h2>Справочници, самоучители</h2>
@@ -61,7 +61,8 @@
                     </li>
                     <li><h3>Browsers support</h3>
                         <ol>
-                            <li><a class="adv" href="http://caniuse.com/">caniuse.com</a><span>най-доброто място, на което можете да проверите какво от HTML/CSS/JS се поддържа от различните браузъри.</span></li>
+                            <li><a class="adv" href="http://caniuse.com/">caniuse.com</a><span>бързо и лесно можете да проверите какво от HTML/CSS/JS се поддържа от различните браузъри.</span></li>
+                            <li><a href="http://www.quirksmode.org/">quirksmode.org</a><span>с една дума: класика!</span></li>
                         </ol>
                     </li>
                     <li><h3>Online CSS tools</h3>
@@ -89,7 +90,7 @@
                         <ol>
                             <li><a class="beg" href="https://vimeo.com/creativecommons">Browse the Creative Commons licensed videos on Vimeo</a><span>файловете във <a href="https://vimeo.com/">vimeo</a>, подредени според различните CC лицензи.</span></li>
                             <li><a class="beg" href="https://www.youtube.com/">youtube.com</a> и др.<span>посочете във филтъра при търсенето "CreativeCommons" (или използвайте търсачката: <a href="https://search.creativecommons.org/">CC Search - Creative Commons</a>)</span></li>
-                            <li><a href="http://www.coverr.co/">coverr.co</a><span>beautiful, free videos for your homepage</span></li>
+                            <li><a href="http://www.coverr.co/">coverr.co</a><span>качествени, структурирани в категории видео клипове, който можете свободно да използвате за фон на вашата страница.</span></li>
                         </ol>
                     </li>
                     <li><h3>Икони, символи, шрифтове</h3>
