--- a/pages/themes/beginners/CSS_Selectors_1/examples/attribute_selectors.html
+++ b/pages/themes/beginners/CSS_Selectors_1/examples/attribute_selectors.html
@@ -7,15 +7,17 @@
    <link rel="stylesheet" type="text/css" href="attribute_selectors.css">
 </head>
 <body>
+    <p>Списък с линкове, стилизирани единствено чрез селектори за атрибути CSS </p>
     <ul>
-        <li><a href="http://progressbg.net/" title="ProgressBG">http://progressbg.net/</a></li>
-        <li><a href="https://www.google.bg">https://www.google.bg</a></li>
-        <li><a href="#.pdf">PDF</a></li>
-        <li><a href="#.xlsx">Excel</a></li>
-        <li><a href="http://store.bg/products/book">Продукти</a></li>
-        <li><a href="http://olx.bg/product/laptop">Продукти</a></li>
-        <li><a href="http://third.bg/products/flower">Продукти</a></li>
-        <li><a href="#" rel="tag nofollow">...</a></li>
+        <li><a href="http://progressbg.net/" title="ProgressBG">http://progressbg.net/</a>
+        </li>
+        <li><a href="https://www.google.bg/">https://google.bg</a>
+            </li>
+        <li><a href="http://cmd.to/fm">http://cmd.to/fm</a></li>
+        <li><a href="http://www.w3schools.com/">http://w3schools.com</a></li>
+        <li><a href="http://www.last.fm/">http://last.fm/</a></li>
+        <li><a href="files/8_Въведение_в_CSS.pdf">PDF</a></li>
+        <li><a href="ftp://91.193.237.1/pub/docs/linux-support/programming/HTML-CSS/">ftp://91.193.237.1/pub/docs/linux-support/programming/HTML-CSS/</a></li>
     </ul>
 </body>
 </html>
