--- a/pages/themes/beginners/CSS_Selectors_1/examples/class_selectors.html
+++ b/pages/themes/beginners/CSS_Selectors_1/examples/class_selectors.html
@@ -7,21 +7,14 @@
 </head>
 <body>
     <div>
-        <div>
-            <p><a href="http://progressbg.net/" title="ProgressBG">ProgressBG</a></p>
-            <p><a href="https://www.google.bg">google.bg</a></p>
-        </div>
+        <p>Purple Section:</p>
+        <h1 class="c1">Заглавие</h1>
+        <p class="c1">Параграф</p>
+        <h2 class="c1">Под заглавие</h2>
+        <p class="c1">Параграф</p>
+        <p id="vip">Параграф с id="vip"</p>
     </div>
-    <div>
-        <ul>
-            <li><a href="#.pdf">PDF</a></li>
-            <li><a href="#.xlsx">Excel</a></li>
-            <li><a href="http://store.bg/products/book">Продукти</a></li>
-            <li><a href="http://olx.bg/product/laptop">Продукти</a></li>
-            <li><a href="http://third.bg/products/flower">Продукти</a></li>
-            <li></li>
-        </ul>
-    </div>
+
 </body>
 </html>
 
