--- a/pages/themes/beginners/CSS_Selectors_1/examples/type_selectors–famous_quotes.html
+++ b/pages/themes/beginners/CSS_Selectors_1/examples/type_selectors–famous_quotes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>type_selectors</title>
-        <style type="text/css">
+    <style type="text/css">
             body{
                 font-family: serif;
                 color: gray;
@@ -28,19 +28,25 @@
             li{
                 margin-top: .7em;
             }
-        </style>
+    </style>
 </head>
 <body>
-    <h1>Цитати от велики личности</h1>
-    <ul><h2>Марк Твен</h2>
-        <li>"Ние в Америка получихме три безценни подаръка: свобода на словото, свобода на съвестта и благоразумие, предпазващо ни да се ползваме от тях."</li>
-        <li>"Ако спориш с идиот, вероятността той да прави абсолютно същото е много голяма."</li>
-        <li>"По-добре дръжте устата си затворена и оставете хората да ви смятат за глупави, отколкото да я отворите и да разсеете всички съмнения."</li>
-    </ul>
-    <ul><h2>Луиз Карол</h2>
-        <li>„Ако не знаеш къде отиваш, всеки път ще те отведе там”.</li>
-        <li>„Не мога да се върна към вчерашния ден – тогава бях друг човек”.</li>
-        <li>„Трябва да си полулуд, за да ме накараш да мечтая.“</li>
-    </ul>
+    <div  class="page">
+
+        <section class="right">
+            <h1>Цитати от велики личности</h1>
+            <ul><h2>Марк Твен</h2>
+                <li>"Ние в Америка получихме три безценни подаръка: свобода на словото, свобода на съвестта и благоразумие, предпазващо ни да се ползваме от тях."</li>
+                <li>"Ако спориш с идиот, вероятността той да прави абсолютно същото е много голяма."</li>
+                <li>"По-добре дръжте устата си затворена и оставете хората да ви смятат за глупави, отколкото да я отворите и да разсеете всички съмнения."</li>
+            </ul>
+            <ul><h2>Луиз Карол</h2>
+                <li>„Ако не знаеш къде отиваш, всеки път ще те отведе там”.</li>
+                <li>„Не мога да се върна към вчерашния ден – тогава бях друг човек”.</li>
+                <li>„Трябва да си полулуд, за да ме накараш да мечтая.“</li>
+            </ul>
+        </section>
+    </div>
+
 </body>
 </html>
