--- a/pages/readings/beginners/UsefulResources.html
+++ b/pages/readings/beginners/UsefulResources.html
@@ -16,7 +16,7 @@
         <h3><a href="../../../index.html">WebDesign/Front-end Dev Course</a></h3>
         <h4>Полезни ресурси</h4>
     </header>
-    <section class="disclaimer">Списъкът непрекъснато ще се променя! Вашите предложения с добре дошли...</section>
+    <section class="disclaimer">Списъкът непрекъснато ще се променя! Вашите предложения са добре дошли...</section>
     <section class="resources_list_container">
         <ul>
             <li><h2>Справочници, самоучители</h2>
