--- a/pages/themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html
+++ b/pages/themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html
@@ -205,7 +205,7 @@
             <hr>
             <ul>
                 <li>DIV3: Child of DIV2; Descendant of DIV2 and DIV3</li>
-                <li><a href="examples/html_nodes_types.html">Код...</a></li>
+                <li><a href="examples/html_nodes_types_code_and_preview.html">Пример</a></li>
             </ul>
         </div>
     </section>
