--- a/pages/themes/beginners/CSS_Selectors_1/examples/type_selectors_example.html
+++ b/pages/themes/beginners/CSS_Selectors_1/examples/type_selectors_example.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>type_selectors_example.html</title>
-    <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/tomorrow-night-eighties.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/codepen-embed.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/tomorrow-night-eighties.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/codepen-embed.min.css"> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/highlight.min.js"/>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/languages/css.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
