--- a/pages/themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html
+++ b/pages/themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html
@@ -210,13 +210,13 @@
         </div>
     </section>
     <section>
-        <p>Поради причини за сигурност не можем да селектираме елементи нагоре по дървото. Поради това няма селектор за предшественик.</p>
+        <p>Поради съображения за сигурност не можем да селектираме елементи и в ляво по  дървото. Поради това няма селектор за предшественик.</p>
         <p>Селекторите, чрез които можем да избираме елементи в HTML дървото са:</p>
         <ul>
             <li>селектор за наследници (descendant selector): '<b>space</b>'</li>
             <li>селектор за деца (child selector): '<b>></b>'</li>
-            <li>селектор за братя - без значение дали са един до друг (general sibling selector): '<b>~</b>'</li>
-            <li>селектор за братя, които са непосредствено един до друг (adjacent sibling selector):  '<b>+</b>'</li>
+            <li>селектор за брат - без значение дали следва непосредствено брат си (general sibling selector): '<b>~</b>'</li>
+            <li>селектор за брат, който е разположен непосредствено след брат си (adjacent sibling selector):  '<b>+</b>'</li>
         </ul>
     </section>
 </section>
