--- a/pages/themes/beginners/CSS_Intro/CSS_Intro.html
+++ b/pages/themes/beginners/CSS_Intro/CSS_Intro.html
@@ -28,10 +28,9 @@
     <!-- custom -->
     <link rel="stylesheet" href="../../../../outfit/css/reveal.js.css">
     <style type="text/css">
-    .reveal .slides h1{
-        font-family: serif;
-        color: #A7439D;
-    }
+        .reveal .slides > section > section{
+            /*zoom: .9;*/
+        }
     </style>
     <base target="_blank">
 </head>
@@ -274,7 +273,8 @@ h4 {
         <h3>Местоположение (location)</h3>
     </section>
     <section><h3>Специфичност (specificity)</h3>
-        <p>Определя се от типа на селектора (ще разгледаме подробно в темата за CSS селектори)</p>
+        <p>Определя се от типа на селектора - колкото по-специфичен е един селектор, с толкова по-висок приоритет ще бъде той.</p>
+        <p>(ще разгледаме подробно в темата за CSS селектори)</p>
     </section>
     <section><h3>Наследяване (inheritance)</h3>
         <h3>Дървовидна структура на HTML документ</h3>
@@ -324,7 +324,6 @@ h4 {
         </code></pre>
     </section>
     <section><h3>Местоположение (location)</h3>
-        <h3>Каскадно прилагане на стил</h3>
         <ol reversed>
             <li>Стил, прилаган от Браузера.</li>
             <li>Потребителски стил на Браузера (“reader/user style sheet”)</li>
@@ -379,8 +378,11 @@ h4 {
             keyboard: true,
             history: true,
             center: true,
-            // width: '100%',
-            // height: '100%',
+            width: 1024,
+            height: 850,
+            // Bounds for smallest/largest possible scale to apply to content
+            // minScale: .5,
+            maxScale: 1,
             // slide transition
             transition: 'concave', // none/fade/slide/convex/concave/zoom
             // Factor of the display size that should remain empty around the content
