--- a/pages/themes/beginners/CSS_BasicProperties/CSS_Basic_Properties.html
+++ b/pages/themes/beginners/CSS_BasicProperties/CSS_Basic_Properties.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>cliche</title>
+    <title>CSS Basic Properties</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -49,7 +49,9 @@
 ##################### SLIDES START #####################
 ########################################################
 -->
-<section><h1>PresentationTitile</h1></section>
+<section><h1>Стилизиране на елементите в страницата чрез CSS3</h1>
+        <hr><br>
+        <h2>Основни CSS свойства за оформление на текст, шрифт, цвят, фон и рамка.</h2></section>
 <section data-transition="zoom">
     <div class="copyright">
         <div class="note">
@@ -67,9 +69,124 @@
     </div>
 </section>
 
-<section><h2>SectionTitle</h2>
-    <section>
+<section><h2>CSS свойства за оформление на текст</h2>
+    <section><h3>Self-Learning Section</h3>
+        <a href="http://www.w3schools.com/css/css_text.asp">w3schools: CSS Text</a>
+    </section>
+    <section><h3>Text Color</h3>
+        <p>Свойство: color</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_text_color.asp">w3schools: CSS color Property</a></p>
+    </section>
+    <section><h3>Text Alignment</h3>
+        <p>Свойство: text-align</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_text_text-align.asp">w3schools: CSS text-align Property</a></p>
+    </section>
+    <section><h3>Vertical Alignment</h3>
+        <p>Свойство: vertical-align</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_pos_vertical-align.asp">w3schools: CSS vertical-align Property</a></p>
+        <p>Забележка: това свойство се разглежда като свойство за позициониране, но е включено тук за пълнота!</p>
+    </section>
+    <section><h3>Text Decoration</h3>
+        <p>Свойство: text-decoration</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_text_text-decoration.asp">w3schools: CSS text-decoration Property</a></p>
+    </section>
+    <section><h3>Text Transformation</h3>
+        <p>Свойство: text-transform</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_text_text-transform.asp">w3schools: CSS text-transform Property</a></p>
+    </section>
+    <section><h3>Text Indentation</h3>
+        <p>Свойство: text-indent</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_text_text-indent.asp">w3schools: CSS text-indent Property</a></p>
+    </section>
+    <section><h3>Letter Spacing</h3>
+        <p>Свойство: letter-spacing</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_text_letter-spacing.asp">w3schools: CSS letter-spacing Property</a></p>
+    </section>
+    <section><h3>Word Spacing</h3>
+        <p>Свойство: word-spacing</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_text_word-spacing.asp">w3schools: CSS word-spacing Property</a></p>
+    </section>
+    <section><h3>Line Height</h3>
+        <p>Свойство: line-height</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_dim_line-height.asp">w3schools: CSS line-height Property</a></p>
+    </section>
+</section>
 
+<section><h2>CSS свойства за оформление на шрифт</h2>
+    <section><h3>Self-Learning Section</h3>
+        <a href="http://www.w3schools.com/css/css_font.asp">w3schools: CSS Fonts</a>
+    </section>
+    <section><h3>Font Family</h3>
+        <p>Свойство: font-family</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_font_font-family.asp">w3schools: CSS font-family Property</a></p>
+    </section>
+    <section><h3>Font Size</h3>
+        <p>Свойство: font-size</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_font_font-size.asp">w3schools: CSS font-size Property</a></p>
+    </section>
+    <section><h3>Font Style</h3>
+        <p>Свойство: font-style</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_font_font-style.asp">w3schools: CSS font-style Property</a></p>
+    </section>
+    <section><h3>Font Weight</h3>
+        <p>Свойство: font-weight</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_font_font-weight.asp">w3schools: CSS font-weight Property</a></p>
+    </section>
+    <section><h3>Font Variant</h3>
+        <p>Свойство: font-variant</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_font_font-variant.asp">w3schools: CSS font-variant Property</a></p>
+    </section>
+    <section><h3>Font - съкратен запис за всички Font свойства</h3>
+        <p>Свойство: font</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_font_font.asp">w3schools: CSS font Property</a></p>
+    </section>
+</section>
+
+<section><h2>CSS свойства за фон на елемент</h2>
+    <section><h3>Self-Learning Section</h3>
+        <a href="http://www.w3schools.com/css/css_font.asp">w3schools: CSS Backgrounds</a>
+    </section>
+    <section><h3>Background Color</h3>
+        <p>Свойство: background-color</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_background-color.asp">w3schools: CSS background-color Property</a></p>
+    </section>
+    <section><h3>Background Image</h3>
+        <p>Свойство: background-image</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_background-image.asp">w3schools: CSS background-image Property</a></p>
+    </section>
+    <section><h3>Background Image - Repeat</h3>
+        <p>Свойство: background-repeat</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_background-repeat.asp">w3schools: CSS background-repeat Property</a></p>
+    </section>
+    <section><h3>Background Image - Atach</h3>
+        <p>Свойство: background-attachment</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_background-attachment.asp">w3schools: CSS background-attachment Property</a></p>
+    </section>
+    <section><h3>Background - съкратен запис за всички Backgrounds свойства</h3>
+        <p>Свойство: background</p>
+        <p><a href="http://www.w3schools.com/cssref/css3_pr_background.asp">w3schools: CSS background Property</a></p>
+    </section>
+</section>
+
+<section><h2>CSS свойства за рамка на елемент</h2>
+    <section><h3>Self-Learning Section</h3>
+        <a href="http://www.w3schools.com/css/css_border.asp">w3schools: CSS Borders</a>
+    </section>
+    <section><h3>Border Style</h3>
+        <p>Свойство: border-style</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_border-style.asp">w3schools: CSS border-style Property</a></p>
+    </section>
+    <section><h3>Border Width</h3>
+        <p>Свойство: border-width</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_border-width.asp">w3schools: CSS border-width Property</a></p>
+    </section>
+    <section><h3>Border Color</h3>
+        <p>Свойство: border-color</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_border-color.asp">w3schools: CSS border-color Property</a></p>
+    </section>
+    <section><h3>Border - съкратен запис за всички Border свойства</h3>
+        <p>Свойство: border</p>
+        <p><a href="http://www.w3schools.com/cssref/pr_border.asp">w3schools: CSS border Property</a></p>
     </section>
 </section>
 
@@ -86,7 +203,7 @@
     <!-- external scripts -->
     <script src="../../../../outfit/reveal.js/lib/js/head.min.js"></script>
     <script src="../../../../outfit/reveal.js/js/reveal.js"></script>
-    <!-- init reveal -->
+     <!-- init reveal -->
     <script>
         // Full list of configuration options available at:
         // https://github.com/hakimel/reveal.js#configuration
@@ -97,8 +214,11 @@
             keyboard: true,
             history: true,
             center: true,
-            // width: '100%',
-            // height: '100%',
+            width: 1024,
+            height: 850,
+            // Bounds for smallest/largest possible scale to apply to content
+            // minScale: .5,
+            maxScale: 1,
             // slide transition
             transition: 'concave', // none/fade/slide/convex/concave/zoom
             // Factor of the display size that should remain empty around the content
