--- a/pages/themes/beginners/HTML_Lists/HTML_Lists.html
+++ b/pages/themes/beginners/HTML_Lists/HTML_Lists.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>cliche</title>
+    <title>Списъци в HTML</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
-        <a class="home_link" href="../../../agenda/beginners.html"><i class="fa fa-home"></i></a>
+        <a class="home_link" href="../../../agenda/beginners.html#HTML_Lists"><i class="fa fa-home"></i></a>
         <div class="footer theme_switch">
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/white.css'); return false;">White</a>
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/league.css'); return false;">League</a>
@@ -49,7 +49,7 @@
 ##################### SLIDES START #####################
 ########################################################
 -->
-<section><h1>PresentationTitile</h1></section>
+<section><h1>Списъци в HTML</h1></section>
 <section data-transition="zoom">
     <div class="copyright">
         <div class="note">
@@ -67,11 +67,74 @@
     </div>
 </section>
 
-<section><h2>SectionTitle</h2>
-    <section>
 
+<section><h3>Неподреден списък (Unordered List)</h3>
+        <h4>Елемент: <code><strong>UL</strong></code></h4>
+        <pre><code>
+&lt;p&gt;Необходими продукти&lt;/p&gt;
+&lt;ul&gt;
+    &lt;li&gt;2 бр. яйца&lt;/li&gt;
+    &lt;li&gt;1 ч.ч. прясно мляко или вода&lt;/li&gt;
+    &lt;li&gt;1 ч.ч. брашно тип 500&lt;/li&gt;
+    &lt;li&gt;1 с.л. краве масло&lt;/li&gt;
+    &lt;li&gt;Щипка сол, щипка захар&lt;/li&gt;
+&lt;/ul&gt;
+        </code></pre><br>
+        <ul class="fa">
+            <li>В елемент <code><strong>UL</strong></code> може да имаме единствено <code><strong>LI</strong></code> елементи!</li>
+            <li>В <code><strong>LI</strong></code> е позволено да вмъкваме всякакви елементи!</li>
+            <li>Форматирането на неподредения списък се извършва изцяло чрез CSS!</li>
+        </ul>
+</section>
+
+<section><h2>Подреден списък (Ordered List)</h2>
+    <section><h3>Дефиниране</h3>
+        <h4>Елемент: <code><strong>OL</strong></code></h4>
+        <pre><code>
+&lt;ul&gt;
+    &lt;li&gt;Яйцата се разбиват, докато се получи еднородна смес.&lt;/li&gt;
+    &lt;li&gt;Добавя се млякото, щипка сол и щипка захар.&lt;/li&gt;
+    &lt;li&gt;На малки порции се добавя пресятото брашно.&lt;/li&gt;
+    &lt;li&gt;Разбъркваме до получаването на гъста смес
+        с консистенция подобна на боза.&lt;/li&gt;
+&lt;/ul&gt;
+        </code></pre><br>
+        <ul class="fa">
+            <li>В елемент <code><strong>OL</strong></code> може да имаме единствено <code><strong>LI</strong></code> елементи!</li>
+            <li>В <code><strong>LI</strong></code> е позволено да вмъкваме всякакви елементи!</li>
+        </ul>
+    </section>
+    <section><h3>Форматиране</h3>
+        <ul class="fa">
+            <li>Можем да управляваме типа на номерирането чрез атрибутите на елемента <code>OL</code>: <a href="http://www.w3schools.com/tags/tag_ol.asp">http://www.w3schools.com/tags/tag_ol.asp</a></li>
+            <li>Както и чрез атрибута <code>value</code> на елемент <code>LI</code> (<strong>само в подреден списък</strong>): <a href="http://www.w3schools.com/tags/tag_li.asp">http://www.w3schools.com/tags/tag_li.asp</a>
+            </li>
+            <li>Въпреки че посочените атрибути са позволени (все още), за предпочитане е форматирането на подредените списъци да се извършва със CSS.</li>
+        </ul>
     </section>
 </section>
+
+<section><h2>Вложени списъци (Nested Lists)</h2>
+    <section><h3>Пример</h3>
+        <pre><code>
+    &lt;p&gt;Моите любими неща&lt;/p&gt;
+    &lt;ol&gt;
+        &lt;li&gt;Автори
+            &lt;ul type="square"&gt;
+                &lt;li&gt;Агоп Мелконян&lt;/li&gt;
+                &lt;li&gt;Борис Виан&lt;/li&gt;
+                &lt;li&gt;Кърт Вонегът&lt;/li&gt;
+                &lt;li&gt;Марк Твен&lt;/li&gt;
+                &lt;li&gt;Павел Вежинов&lt;/li&gt;
+                &lt;li&gt;Тери Пратчет&lt;/li&gt;
+            &lt;/ul&gt;
+        &lt;/li&gt;
+    &lt;/ol&gt;
+        </code></pre>
+    </section>
+</section>
+
+
 
 <section data-background="../../../../outfit/images/for_slides/the_end_on_sand.jpg">
     <!-- <img class="the_end" src="../../../../outfit/images/for_slides/the_end_on_sand.jpg"> -->
